fixes:#282 change width of dialog box and align center

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -461,3 +461,8 @@ a {
 em{
   background-color: orange;
 }
+.settingsComponents{
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+}
